jenkins/master/kubernetes/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ${APP_NAME}
 namespace: ${NAMESPACE}
spec:
 replicas: 1
 selector:
    matchLabels:
      app: ${APP_NAME}
 template:
  metadata:
    labels:
      app: ${APP_NAME}
  spec:
    containers:
    - name: ${APP_NAME}
      imagePullPolicy: Always
      image: ${IMAGE}
      ports:
      - containerPort: ${SERVER_PORT}
      - containerPort: 50000
      securityContext: 
        runAsUser: 0 
      volumeMounts:
      - name: ${APP_NAME}-home
        mountPath: /var/jenkins_home        
      resources:
        limits:
          cpu: 1000m
          memory: 1500Mi
        requests:
          cpu: 1000m
          memory: 1500Mi
      readinessProbe:
        httpGet:
          path: /login
          port: ${SERVER_PORT}
        periodSeconds: 60
        timeoutSeconds: 30
        successThreshold: 2
        failureThreshold: 5
    volumes:
    - name: ${APP_NAME}-home
      persistentVolumeClaim:
        claimName: ${APP_NAME}-disk
