jenkins/master/kubernetes/04-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: ${APP_NAME}
 namespace: ${NAMESPACE}
spec:
 replicas: 1
 template:
  metadata:
    labels:
      app: ${APP_NAME}
  spec:
    containers:
    - name: ${APP_NAME}
      imagePullPolicy: Always
      image: ${IMAGE}
      ports:
      - containerPort: ${SERVER_PORT}
      - containerPort: 50000
      readinessProbe:
        httpGet:
          path: /login
          port: ${SERVER_PORT}
        periodSeconds: 10
        timeoutSeconds: 5
        successThreshold: 2
        failureThreshold: 5
      securityContext: 
        runAsUser: 0 
      volumeMounts:
      - name: ${APP_NAME}-home
        mountPath: /var/jenkins_home        
      resources:
        limits:
          cpu: 1000m
          memory: 1500Mi
        requests:
          cpu: 1000m
          memory: 1500Mi
    - name: ${APP_NAME}-nginx-proxy
      imagePullPolicy: Always
      image: nginx:1.14-alpine-perl
      readinessProbe:
        httpGet:
          path: /
          port: ${NGINX_SERVER_PORT}
        periodSeconds: 60
        timeoutSeconds: 30
        successThreshold: 2
        failureThreshold: 5    
      ports:
      - containerPort: ${NGINX_SERVER_PORT}
      volumeMounts:
      - name: nginx-proxy-config
        mountPath: /etc/nginx/nginx.conf
        subPath: nginx.conf
    volumes:
    - name: nginx-proxy-config
      configMap:
        name: proxy-nginx-conf
    - name: ${APP_NAME}-home
      persistentVolumeClaim:
        claimName: ${APP_NAME}-disk
