jenkins/master/kubernetes/05-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}-discovery
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
---
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}-ui
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  selector:
    app: ${APP_NAME}
  ports:
  - name: https
    port: ${SERVER_PORT}
    targetPort: ${SERVER_PORT}
