jenkins/master/kubernetes/05-ingress.nossl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${STATIC_IP}
  labels:
    app: ${APP_NAME}
spec:
  rules:
  -
    host: ${DOMAIN}
    http:
      paths:
      - path: /*
        backend:
          serviceName: ${APP_NAME}-ui
          servicePort: ${SERVER_PORT}
